--- a/MVC6_QAndA.WEB/Views/Shared/_LoginPartial.cshtml
+++ b/MVC6_QAndA.WEB/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<MVC6_QAndA.DAL.Entities.UserEF> SignInManager
+@inject UserManager<MVC6_QAndA.DAL.Entities.UserEF> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
